dts/testData/inspections/content/RootDeleteNodeByName.dts
<error descr="Not a valid root entry">/delete-node/</error> name;

prop = "value";